Closed Bug 1683228 Opened 3 years ago Closed 3 years ago

ConsoleInstance.cpp incorrectly fallback to All when maxLogLevelPref doesn't exist

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
86 Branch

People

(Reporter: rnons, Assigned: rnons)

References

Details

Attachments

(2 files)

Assignee: nobody → remotenonsense
Status: NEW → ASSIGNED
No longer blocks: 1425574
Depends on: 1425574
Keywords: leave-open
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/integration/autoland/rev/5077eb1ad67c
Fallback to maxLogLevel when maxLogLevelPref doesn't exist. r=smaug
Severity: -- → S3
Priority: -- → P3
Attachment #9194125 - Attachment description: Bug 1683228 - Observe maxLogLevelPref and update maxLogLevel accordingly. r=smaug → Bug 1683228 - Check maxLogLevelPref value each time and use it when available. r=smaug
Pushed by ncsoregi@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3bc433def946
Check maxLogLevelPref value each time and use it when available. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Keywords: leave-open
Resolution: --- → FIXED

No need to close the bug yourself. It will (should) get closed when the actual merge to mozilla-central happens (and the final changeset is added to the bug, like comment 6.)

Target Milestone: --- → 86 Branch
Regressions: 1685407
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: