Bug 1683228 - Fallback to maxLogLevel when maxLogLevelPref doesn't exist. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D100074